# veda_qt_todo_fork

./: .gitignore  README.md
QtTodoUI/: CMakeLists.txt  CMakeUserPresets.json  DataManage.h  Todo.h  TodoRepo.h  TodpRepoFile.cpp  UserTodo.cpp  UserTodo.h  UserTodoConverter.cpp  UserTodoConverter.h  button.cpp  button.h  button.ui  calendardialog.cpp  calendardialog.h  centeralcontent.cpp  centeralcontent.h  centeralcontent.ui  datamanage.cpp  finishenabletab.cpp  finishenabletab.h  finishenabletab.ui  finishtodotab.cpp  finishtodotab.h  finishtodotab.ui  head.cpp  head.h  head.ui  icons.qrc  inputwidget.cpp  inputwidget.h  inputwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  todo.cpp  todoitem.cpp  todoitem.h  todoitem.ui  (+9 more)
